--- a/1.html
+++ b/1.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="1">
+
+    </div>
+    <div class="2">
+
+    </div>
 </body>
 </html>
